--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -1,3 +1,7 @@
+html {
+    font-size: 18px !important;
+}
+
 .btn-success {
     background-color: rgb(2, 130, 107) !important;
 }
@@ -7,9 +11,9 @@
 }
 
 .my-hover-light:hover {
-    background-color: white;
-    border: 1px solid black;
-    color: black;
+    background-color: white !important;
+    border: 1px solid black !important;
+    color: black !important;
 }
 
 .my-hover-success:hover {
@@ -20,4 +24,19 @@
 
 img {
     width: 100%;
+    object-fit: cover;
+    border-radius: 5px;
+}
+
+.bg-success-subtle {
+    background-color: rgb(247, 252, 251) !important;
+}
+
+.bg-success {
+    background-color: rgb(0, 83, 68) !important;
+}
+
+.my-btm-img {
+    min-width: 120px;
+    max-width: 140px;
 }
